@@ -810,6 +810,13 @@ tests.</long>
     <short>Color for chroma-key overlay (#RRGGBB), default #FFCCCC.</short>
    </locale>
   </schema>
+  <schema>
+   <key>/schemas/apps/zapping/plugins/deinterlace/method</key>
+   <applyto>/apps/zapping/plugins/deinterlace/method</applyto>
+   <owner>Zapping</owner>
+   <type>string</type>
+   <default>disabled</default>
+  </schema>
 
  </schemalist>
 </gconfschemafile>
